WebCore/rendering/RenderBlock.cpp
@@ -5229,7 +5229,7 @@ bool RenderBlock::hasLineIfEmpty() const
     if (node()->isContentEditable() && node()->rootEditableElement() == node())
         return true;
     
-    if (node()->isShadowNode() && (node()->shadowParentNode()->hasTagName(inputTag) || node()->shadowParentNode()->hasTagName(textareaTag)))
+    if (node()->isShadowNode() && (node()->shadowParentNode()->hasTagName(inputTag)))
         return true;
     
     return false;
