WebCore/rendering/TextControlInnerElements.cpp
@@ -52,6 +52,7 @@ public:
     RenderTextControlInnerBlock(Node* node, bool isMultiLine) : RenderBlock(node), m_multiLine(isMultiLine) { }
 
 private:
+    virtual bool hasLineIfEmpty() const { return true; }
     virtual VisiblePosition positionForPoint(const IntPoint&);
 
     bool m_multiLine;
